--- a/renderer/index.html
+++ b/renderer/index.html
@@ -10,7 +10,7 @@
     <div class="container">
       <!-- Header -->
       <div class="header">
-        <h1><img src="icons/cpu.svg" class="icon" /> Trading Bot</h1>
+        <h1><img src="icons/cpu.svg" class="icon" style="stroke: #667eea" /> Trading Bot</h1>
         <div class="status-badges">
           <span class="status-badge inactive" id="botStatus">Bot: Dừng</span>
           <span class="status-badge inactive" id="orderStatus">Lệnh: Không hoạt động</span>
@@ -20,7 +20,9 @@
       <!-- Stats Overview -->
       <div class="stats-overview">
         <div class="stat-card">
-          <div class="stat-card-title">💰 Tài khoản</div>
+          <div class="stat-card-title">
+            <img src="icons/dollar-sign.svg" class="icon" style="stroke: #10b981" /> Tài khoản
+          </div>
           <div class="stat-row">
             <span class="stat-label">Số dư</span>
             <span class="stat-value" id="balance">0 USDT</span>
@@ -32,7 +34,9 @@
         </div>
 
         <div class="stat-card">
-          <div class="stat-card-title">📊 Lệnh</div>
+          <div class="stat-card-title">
+            <img src="icons/bar-chart-2.svg" class="icon" style="stroke: #4a90e2" /> Lệnh
+          </div>
           <div class="stat-row">
             <span class="stat-label">Hôm nay</span>
             <span class="stat-value" id="ordersToday">0 / 10</span>
@@ -44,7 +48,9 @@
         </div>
 
         <div class="stat-card">
-          <div class="stat-card-title">🔌 Kết nối</div>
+          <div class="stat-card-title">
+            <img src="icons/zap.svg" class="icon" style="stroke: #f5a623" /> Kết nối
+          </div>
           <div class="stat-row">
             <span class="stat-label">Binance</span>
             <span class="stat-value" id="binanceStatus">❌</span>
@@ -59,9 +65,15 @@
       <!-- Tabs Container -->
       <div class="tabs-container">
         <div class="tabs">
-          <div class="tab active" onclick="switchTab('positions')"><img src="icons/briefcase.svg" class="icon" /> Vị thế</div>
-          <div class="tab" onclick="switchTab('signals')"><img src="icons/wifi.svg" class="icon" /> Tín hiệu</div>
-          <div class="tab" onclick="switchTab('logs')"><img src="icons/file-text.svg" class="icon" /> Logs</div>
+          <div class="tab active" onclick="switchTab('positions')">
+            <img src="icons/briefcase.svg" class="icon" style="stroke: currentColor" /> Vị thế
+          </div>
+          <div class="tab" onclick="switchTab('signals')">
+            <img src="icons/wifi.svg" class="icon" style="stroke: currentColor" /> Tín hiệu
+          </div>
+          <div class="tab" onclick="switchTab('logs')">
+            <img src="icons/file-text.svg" class="icon" style="stroke: currentColor" /> Logs
+          </div>
         </div>
 
         <!-- Tab: Open Positions -->
@@ -119,11 +131,21 @@
     <!-- Fixed Action Buttons -->
     <div class="fixed-actions">
       <div class="action-buttons">
-        <button class="btn btn-success" id="startBtn"><img src="icons/play.svg" class="icon" /> Bắt đầu</button>
-        <button class="btn btn-danger" id="stopBtn"><img src="icons/pause.svg" class="icon" /> Dừng</button>
-        <button class="btn btn-primary" id="startOrderBtn"><img src="icons/trending-up.svg" class="icon" /> Bắt đầu lệnh</button>
-        <button class="btn btn-warning" id="stopOrderBtn"><img src="icons/stop-circle.svg" class="icon" /> Dừng lệnh</button>
-        <button class="btn btn-secondary" id="settingsBtn"><img src="icons/settings.svg" class="icon" /> Cài đặt</button>
+        <button class="btn btn-success" id="startBtn">
+          <img src="icons/play.svg" class="icon" style="stroke: white" /> Bắt đầu
+        </button>
+        <button class="btn btn-danger" id="stopBtn">
+          <img src="icons/pause.svg" class="icon" style="stroke: white" /> Dừng
+        </button>
+        <button class="btn btn-primary" id="startOrderBtn">
+          <img src="icons/trending-up.svg" class="icon" style="stroke: white" /> Bắt đầu lệnh
+        </button>
+        <button class="btn btn-warning" id="stopOrderBtn">
+          <img src="icons/stop-circle.svg" class="icon" style="stroke: #333" /> Dừng lệnh
+        </button>
+        <button class="btn btn-secondary" id="settingsBtn">
+          <img src="icons/settings.svg" class="icon" style="stroke: #333" /> Cài đặt
+        </button>
       </div>
       <div style="text-align: center; margin-top: 8px">
         <button
@@ -131,7 +153,7 @@
           id="reportBtn"
           style="width: calc(100% - 20px); max-width: 1180px"
         >
-          <img src="icons/bar-chart-2.svg" class="icon" /> Báo cáo
+          <img src="icons/bar-chart-2.svg" class="icon" style="stroke: #333" /> Báo cáo
         </button>
       </div>
     </div>
@@ -140,17 +162,23 @@
     <div id="settingsModal" class="modal">
       <div class="modal-content">
         <div class="modal-header">
-          <h2><img src="icons/settings.svg" class="icon" /> Cài đặt</h2>
-          <button class="close-modal" id="closeSettingsModal"><img src="icons/x.svg" class="icon" /></button>
+          <h2><img src="icons/settings.svg" class="icon" style="stroke: #667eea" /> Cài đặt</h2>
+          <button class="close-modal" id="closeSettingsModal">
+            <img src="icons/x.svg" class="icon" style="stroke: #666" />
+          </button>
         </div>
         <div class="modal-body">
           <!-- Settings Tabs -->
           <div class="modal-tabs">
             <div class="modal-tab active" onclick="switchSettingsTab('strategy', event)">
-              <img src="icons/sliders.svg" class="icon" /> Chiến lược
+              <img src="icons/sliders.svg" class="icon" style="stroke: currentColor" /> Chiến lược
             </div>
-            <div class="modal-tab" onclick="switchSettingsTab('keys', event)"><img src="icons/key.svg" class="icon" /> API Keys</div>
-            <div class="modal-tab" onclick="switchSettingsTab('app', event)"><img src="icons/tool.svg" class="icon" /> App Config</div>
+            <div class="modal-tab" onclick="switchSettingsTab('keys', event)">
+              <img src="icons/key.svg" class="icon" style="stroke: currentColor" /> API Keys
+            </div>
+            <div class="modal-tab" onclick="switchSettingsTab('app', event)">
+              <img src="icons/tool.svg" class="icon" style="stroke: currentColor" /> App Config
+            </div>
           </div>
 
           <!-- Tab: Strategy Settings -->
@@ -379,10 +407,10 @@
 
           <div style="margin-top: 20px; display: flex; gap: 10px">
             <button class="btn btn-success" style="flex: 1" id="saveSettingsBtn">
-              <img src="icons/save.svg" class="icon" /> Lưu cấu hình
+              <img src="icons/save.svg" class="icon" style="stroke: white" /> Lưu cấu hình
             </button>
             <button class="btn btn-warning" style="flex: 1" id="resetSettingsBtn">
-              <img src="icons/refresh-cw.svg" class="icon" /> Đặt lại
+              <img src="icons/refresh-cw.svg" class="icon" style="stroke: #333" /> Đặt lại
             </button>
           </div>
         </div>
@@ -393,8 +421,13 @@
     <div id="reportModal" class="modal">
       <div class="modal-content" style="max-width: 600px">
         <div class="modal-header">
-          <h2><img src="icons/bar-chart-2.svg" class="icon" /> Báo cáo giao dịch</h2>
-          <button class="close-modal" id="closeReportModal"><img src="icons/x.svg" class="icon" /></button>
+          <h2>
+            <img src="icons/bar-chart-2.svg" class="icon" style="stroke: #667eea" /> Báo cáo giao
+            dịch
+          </h2>
+          <button class="close-modal" id="closeReportModal">
+            <img src="icons/x.svg" class="icon" style="stroke: #666" />
+          </button>
         </div>
         <div class="modal-body">
           <div class="report-content" id="reportContent">
@@ -407,7 +440,9 @@
     <!-- Update Notification -->
     <div id="updateNotification" class="update-notification" style="display: none">
       <div class="update-content">
-        <h3><img src="icons/refresh-cw.svg" class="icon" /> Có bản cập nhật</h3>
+        <h3>
+          <img src="icons/refresh-cw.svg" class="icon" style="stroke: #667eea" /> Có bản cập nhật
+        </h3>
         <p id="updateMessage">Có phiên bản mới. Bạn có muốn tải xuống và cài đặt không?</p>
         <div class="update-actions">
           <button class="btn btn-primary" id="downloadUpdateBtn">Tải xuống</button>
