--- a/renderer/index.html
+++ b/renderer/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bảng điều khiển Trading Bot</title>
+    <title>Crypto Trading Bot - Bảng điều khiển</title>
     <link rel="stylesheet" href="styles/main.css" />
   </head>
   <body>
     <div class="container">
       <!-- Header -->
       <div class="header">
-        <h1><img src="icons/cpu.svg" class="icon" style="stroke: #667eea" /> Trading Bot</h1>
+        <h1><img src="icons/cpu.svg" class="icon" style="stroke: #667eea" /> Trading Bot <span class="version-badge" id="appVersion">v1.0.0</span></h1>
         <div class="status-badges">
           <span class="status-badge inactive" id="botStatus">Bot: Dừng</span>
           <span class="status-badge inactive" id="orderStatus">Lệnh: Không hoạt động</span>
@@ -333,6 +333,11 @@
                 <label>Channel ID</label>
                 <input type="text" id="discordChannelId" placeholder="Nhập Discord Channel ID" />
               </div>
+              <div class="form-group" style="grid-column: 1 / -1">
+                <button id="testDiscord" class="btn btn-secondary" type="button">
+                  🧪 Test Discord Connection
+                </button>
+              </div>
             </div>
 
             <div class="section-title">Tích hợp Telegram</div>
@@ -350,7 +355,20 @@
               </div>
               <div class="form-group" style="grid-column: 1 / -1">
                 <label>Chat ID</label>
-                <input type="text" id="telegramChatId" placeholder="Nhập Telegram Chat ID" />
+                <div style="display: flex; gap: 10px; align-items: center;">
+                  <input type="text" id="telegramChatId" placeholder="Nhập Telegram Chat ID hoặc bấm nút 'Lấy Chat ID'" style="flex: 1" />
+                  <button id="getTelegramChatId" class="btn btn-primary" type="button" style="white-space: nowrap;">
+                    🔍 Lấy Chat ID
+                  </button>
+                </div>
+                <small style="color: #666; margin-top: 5px; display: block;">
+                  💡 Gửi tin nhắn "/start" cho bot trước khi bấm "Lấy Chat ID"
+                </small>
+              </div>
+              <div class="form-group" style="grid-column: 1 / -1">
+                <button id="testTelegram" class="btn btn-secondary" type="button">
+                  🧪 Test Telegram Connection
+                </button>
               </div>
             </div>
           </div>
@@ -366,6 +384,14 @@
               <div class="form-group">
                 <label>Số tiền mỗi lệnh (USDT)</label>
                 <input type="number" id="quantity" value="10" min="1" />
+              </div>
+              <div class="form-group">
+                <label>Take Profit (%)</label>
+                <input type="number" id="takeProfitPercent" value="4" min="0.1" max="100" step="0.1" />
+              </div>
+              <div class="form-group">
+                <label>Stop Loss (%)</label>
+                <input type="number" id="stopLossPercent" value="2" min="0.1" max="100" step="0.1" />
               </div>
               <div class="form-group">
                 <label>Số lệnh tối đa mỗi ngày</label>
