--- a/renderer/index.html
+++ b/renderer/index.html
@@ -10,7 +10,10 @@
     <div class="container">
       <!-- Header -->
       <div class="header">
-        <h1><img src="icons/cpu.svg" class="icon" style="stroke: #667eea" /> Trading Bot <span class="version-badge" id="appVersion">v1.0.0</span></h1>
+        <h1>
+          <img src="icons/cpu.svg" class="icon" style="stroke: #667eea" /> Trading Bot
+          <span class="version-badge" id="appVersion">v1.0.0</span>
+        </h1>
         <div class="status-badges">
           <span class="status-badge inactive" id="botStatus">Bot: Dừng</span>
           <span class="status-badge inactive" id="orderStatus">Lệnh: Không hoạt động</span>
@@ -132,16 +135,17 @@
     <div class="fixed-actions">
       <div class="action-buttons">
         <button class="btn btn-success" id="startBtn">
-          <img src="icons/play.svg" class="icon" style="stroke: white" /> Bắt đầu
+          <img src="icons/play.svg" class="icon" style="stroke: white" /> Bắt đầu quét
         </button>
         <button class="btn btn-danger" id="stopBtn">
-          <img src="icons/pause.svg" class="icon" style="stroke: white" /> Dừng
+          <img src="icons/pause.svg" class="icon" style="stroke: white" /> Dừng quét
         </button>
         <button class="btn btn-primary" id="startOrderBtn">
-          <img src="icons/trending-up.svg" class="icon" style="stroke: white" /> Bắt đầu lệnh
+          <img src="icons/trending-up.svg" class="icon" style="stroke: white" /> Bắt đầu quét & Đặt
+          lệnh
         </button>
         <button class="btn btn-warning" id="stopOrderBtn">
-          <img src="icons/stop-circle.svg" class="icon" style="stroke: #333" /> Dừng lệnh
+          <img src="icons/stop-circle.svg" class="icon" style="stroke: #333" /> Dừng quét & Đặt lệnh
         </button>
         <button class="btn btn-secondary" id="settingsBtn">
           <img src="icons/settings.svg" class="icon" style="stroke: #333" /> Cài đặt
@@ -355,13 +359,23 @@
               </div>
               <div class="form-group" style="grid-column: 1 / -1">
                 <label>Chat ID</label>
-                <div style="display: flex; gap: 10px; align-items: center;">
-                  <input type="text" id="telegramChatId" placeholder="Nhập Telegram Chat ID hoặc bấm nút 'Lấy Chat ID'" style="flex: 1" />
-                  <button id="getTelegramChatId" class="btn btn-primary" type="button" style="white-space: nowrap;">
+                <div style="display: flex; gap: 10px; align-items: center">
+                  <input
+                    type="text"
+                    id="telegramChatId"
+                    placeholder="Nhập Telegram Chat ID hoặc bấm nút 'Lấy Chat ID'"
+                    style="flex: 1"
+                  />
+                  <button
+                    id="getTelegramChatId"
+                    class="btn btn-primary"
+                    type="button"
+                    style="white-space: nowrap"
+                  >
                     🔍 Lấy Chat ID
                   </button>
                 </div>
-                <small style="color: #666; margin-top: 5px; display: block;">
+                <small style="color: #666; margin-top: 5px; display: block">
                   💡 Gửi tin nhắn "/start" cho bot trước khi bấm "Lấy Chat ID"
                 </small>
               </div>
@@ -387,11 +401,25 @@
               </div>
               <div class="form-group">
                 <label>Take Profit (%)</label>
-                <input type="number" id="takeProfitPercent" value="4" min="0.1" max="100" step="0.1" />
+                <input
+                  type="number"
+                  id="takeProfitPercent"
+                  value="4"
+                  min="0.1"
+                  max="100"
+                  step="0.1"
+                />
               </div>
               <div class="form-group">
                 <label>Stop Loss (%)</label>
-                <input type="number" id="stopLossPercent" value="2" min="0.1" max="100" step="0.1" />
+                <input
+                  type="number"
+                  id="stopLossPercent"
+                  value="2"
+                  min="0.1"
+                  max="100"
+                  step="0.1"
+                />
               </div>
               <div class="form-group">
                 <label>Số lệnh tối đa mỗi ngày</label>
